k8s journey/php-mysql-k8s/k8s/php-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php-app
  template:
    metadata:
      labels:
        app: php-app
    spec:
      containers:
        - name: php
          image: php-app:1.0
          ports:
            - containerPort: 80
