k8s journey/php-mysql-k8s/k8s/service-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  selector:
    app: mysql
  ports:
    - ports: 3306
      targetPort: 3306
