k8s journey/php-mysql-k8s/k8s/service-php.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-service
spec:
  selector:
    app: php-app
  ports:
    - port: 80
      targetPort: 80
