k8s journey/php-mysql-k8s/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: php-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: php.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: php-service
                port:
                  number: 80
